# AIstudioProxyAPI

./: .env.example  .gitignore  README.md  gui_launcher.py  index.html  launch_camoufox.py  pyproject.toml  pyrightconfig.json  pytest.ini  server.py  webui.js
api_utils/: app.py  client_connection.py  context_init.py  context_types.py  dependencies.py  mcp_adapter.py  model_switching.py  page_response.py  queue_worker.py  request_processor.py  response_generators.py  response_payloads.py  server_state.py  sse.py  tools_registry.py  utils.py
browser_utils/: __init__.py  debug_utils.py  initialization.py  model_management.py  operations.py  page_controller.py  script_manager.py  thinking_normalizer.py
config/: __init__.py  constants.py  selector_utils.py  selectors.py  settings.py
deprecated_javascript_version/: README.md
docker/: README-Docker.md  README.md  SCRIPT_INJECTION_DOCKER.md
docs/: advanced-configuration.md  api-usage.md  architecture-guide.md  authentication-setup.md  client-examples.md  daily-usage.md  dependency-versions.md  deployment-and-operations.md  development-guide.md  env-variables-reference.md  environment-configuration.md  installation-guide.md  logging-control.md  openai-compatibility.md  platform-differences.md  quick-start-guide.md  script_injection_guide.md  script_injection_v2_upgrade.md  streaming-modes.md  troubleshooting.md  ui_state_management.md  webui-guide.md
launcher/: __init__.py  checks.py  config.py  frontend_build.py  internal.py  logging_setup.py  process.py  runner.py  utils.py
logging_utils/: __init__.py  setup.py  (+1 more)
(+142 files in other folders)
